# Risolutore-FEM-python

./: README.md  gui_fem.py  gui_fem_pro_v2.py
fem_travi/: README.md  pyproject.toml  solver_travi_fem.html
fem_travi/examples/: esempi.py
fem_travi/fem_travi/: __init__.py  assembler.py  core.py  plotter.py  solver.py
fem_travi/fem_travi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fem_travi/tests/: test_fem.py
